--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Tahoma", sans-serif;
+  background: linear-gradient(to bottom, #7dc3f3, #417fa5),
+    radial-gradient(circle at top right, #ffffff, transparent);
+  background-blend-mode: screen;
+  min-height: 100vh;
+}
