--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,1 +1,9 @@
-<p>todo-item works!</p>
+<li>
+  <input
+    type="checkbox"
+    id="task_{{ task.id }}"
+    name="task_{{ task.id }}"
+    value="{{ task.text }}"
+  />
+  <label for="task_{{ task.id }}">{{ task.text }}</label>
+</li>
