--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,1 +1,10 @@
-<p>todo-list works!</p>
+<div>
+  <h2>Todo List</h2>
+  <div>
+    <input [(ngModel)]="newTaskText" placeholder="Add new task" />
+    <button (click)="addTask()">Add</button>
+  </div>
+  <ul class="todo-list">
+    <app-todo-item *ngFor="let task of tasks" [task]="task"></app-todo-item>
+  </ul>
+</div>
