implement remove task functionality

--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -9,4 +9,5 @@
   <label for="task_{{ task.id }}" [class.done]="task.done">{{
     task.text
   }}</label>
+  <button (click)="removeTask()">Remove</button>
 </li>
