--- a/src/app/components/todo-list/todo-list.component.scss
+++ b/src/app/components/todo-list/todo-list.component.scss
@@ -1,4 +1,30 @@
+@import "../../../styles.scss";
+
 .todo-list {
   list-style-type: none;
   padding: 0;
+  text-align: left;
+  width: 100%;
+}
+
+.container {
+  padding: 10px 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80vw;
+
+  @include desktop {
+    min-height: 50vh;
+    width: 500px;
+  }
+}
+
+input {
+  padding: 6px;
+  margin-right: 20px;
 }
