add css classes for categories

--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -10,3 +10,23 @@ li {
 button {
   margin-left: auto;
 }
+
+.general {
+  background-color: pink;
+}
+
+.shopping {
+  background-color: yellow;
+}
+
+.home {
+  background-color: lightblue;
+}
+
+.work {
+  background-color: navajowhite;
+}
+
+.hobby {
+  background-color: violet;
+}
