implement adding tasks to different categories

--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -2,6 +2,12 @@
   <h2>Todo List</h2>
   <div>
     <input [(ngModel)]="newTaskText" placeholder="Add new task" />
+    <select [(ngModel)]="newTaskCategory" name="category">
+      <option *ngFor="let category of categories" [value]="category.id">
+        {{ category.name }}
+      </option>
+    </select>
+
     <button (click)="addTask()">Add</button>
   </div>
 
