--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -9,7 +9,7 @@
       </option>
     </select>
 
-    <button (click)="addTask()">Add</button>
+    <app-button (click)="addTask()">Add</app-button>
   </div>
 
   <ul class="todo-list">
