add styles for button component

--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -5,9 +5,11 @@
 li {
   display: flex;
   align-items: flex-start;
+  margin-bottom: 4px;
+  padding: 6px;
 }
 
-button {
+app-button {
   margin-left: auto;
 }
 
