update list styles

--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>Todo List</h2>
-  <div>
+  <div class="panel">
     <input [(ngModel)]="newTaskText" placeholder="Add new task" />
     <span>Choose category: </span>
     <select [(ngModel)]="newTaskCategory" name="category">
