replace btn text with icon

--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -10,5 +10,7 @@
     task.text
   }}</label>
 
-  <app-button (clicked)="removeTask()">Remove</app-button>
+  <app-icon-button (clicked)="removeTask()">
+    <i class="far fa-trash-alt"></i>
+  </app-icon-button>
 </li>
