reduce excessive calls to getCategoryName

--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,4 +1,4 @@
-<li [ngClass]="getCategoryName(task.category)">
+<li [ngClass]="categoryName">
   <input
     type="checkbox"
     id="task_{{ task.id }}"
