update app structure and main styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<main class="main-container"><app-todo-list></app-todo-list></main>
+<main class="main-container">
+  <aside>
+    <app-panel></app-panel>
+  </aside>
+
+  <section>
+    <app-todo-list></app-todo-list>
+  </section>
+</main>
