--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Todo List</h2>
+  <h1 class="heading">Todo List</h1>
   <div class="panel">
     <input [(ngModel)]="newTaskText" placeholder="Add new task" />
     <div>
