--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,11 +8,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Tahoma", sans-serif;
+  font-family: "Poppins", sans-serif;
   background: linear-gradient(to bottom, #7dc3f3, #417fa5),
     radial-gradient(circle at top right, #ffffff, transparent);
   background-blend-mode: screen;
   min-height: 100vh;
+}
+
+input,
+select,
+button {
+  font-family: "Poppins", sans-serif;
 }
 
 // define mixins
