--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -8,7 +8,7 @@ li {
   gap: 6px;
   margin-bottom: 4px;
   padding: 6px;
-  padding-left: 15px;
+  padding-left: 25px;
   width: 100%;
   background-color: #fff;
   position: relative;
@@ -16,7 +16,7 @@ li {
   &::before {
     content: "";
     display: block;
-    width: 10px;
+    width: 20px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -32,7 +32,7 @@ li {
   }
 
   &.home::before {
-    background-color: #aec6cf;
+    background-color: #bce9ac;
   }
 
   &.work::before {
